fixed z-index of audio - not overlapping nav/footer now

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ lime green: #AAE748
     height: 50px;
     width: 100%;
     font-family: "Kavoon", sans-serif;
-    z-index: 1;
+    z-index: 2;
     padding-left: 15px;
 }
 
@@ -381,6 +381,10 @@ audio {
     transform: translateY(100px);
     position:relative;
     z-index:1;
+}
+
+.last-audio{
+    padding-bottom:60px;
 }
 
 
@@ -753,6 +757,7 @@ audio {
             bottom: 0;
             width: 100%;
             background-color: #F2AD08;
+            z-index:1;
         }
 
         .sign-up-link {
